--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@clerk/express": "^1.7.1",
+    "@clerk/express": "^1.7.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.4",
     "svix": "^1.67.0"
   },
   "devDependencies": {
